Tomwheeler ex02 durable execution review (#20)
* updated to incorporate changes made to similar code in the "Using Classes" exercise; I have tested the solution using OpenJDK 21 and Apache Maven 3.9.5

* updated practice version to more closely match the solution version, add the needed Duration import statement back in (and remove the comment and README step related to it), and corrected the pom.xml so that it no longer advertises itself as belonging to the solution code.

* added a step for compilation, since starting the Worker failed without it

* updated log statement in the solution to use the correct case for the word being translated and updated the comment in the practice version to reflect that the log statement goes before the Activity invocation, not after it.

* removed unnecessary blank line

* changed tab to spaces

* tab to spaces

* eliminate duplicate comment

* add override annotation, per standard practice

* add override annotation, per standard practice